; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_newfstate.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_newfstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.state = type { i8 }
%struct.nfa = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.state* (%struct.nfa*, i32)* @newfstate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.state* @newfstate(%struct.nfa* %0, i32 %1) #0 {
  %3 = alloca %struct.nfa*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.state*, align 8
  store %struct.nfa* %0, %struct.nfa** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nfa*, %struct.nfa** %3, align 8
  %7 = call %struct.state* @newstate(%struct.nfa* %6)
  store %struct.state* %7, %struct.state** %5, align 8
  %8 = load %struct.state*, %struct.state** %5, align 8
  %9 = icmp ne %struct.state* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = trunc i32 %11 to i8
  %13 = load %struct.state*, %struct.state** %5, align 8
  %14 = getelementptr inbounds %struct.state, %struct.state* %13, i32 0, i32 0
  store i8 %12, i8* %14, align 1
  br label %15

15:                                               ; preds = %10, %2
  %16 = load %struct.state*, %struct.state** %5, align 8
  ret %struct.state* %16
}

declare dso_local %struct.state* @newstate(%struct.nfa*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
